r160 - october, 8, 2009
    * association : templates > loginSuccess.php > explicit message
    * MembrePeer : doSelectPending() method
    

r159 - october, 8, 2009
    * myUser.class.php : new method getTemporaryAssociationId()
    * membre : actions > executeFirstcreate > give the temporary associationId
    

r158 - october, 8, 2009
    * StatutPeer::getCriteriaEnabled() is now getCriteriaEnabledForAssociation()
    * MembreForm.class.php is up date
    * membre : actions > asociationId is given to each form
    

r157 - october, 8, 2009
    * membre : templates > pendingSuccess.php > explicit message
    * StatutPeer::getCriteriaForEnabled() takes associationId as parameter


r156 - october, 8, 2009
    * membre : actions > new action requestSubscription
    * membre : templates > loginSuccess > link to request a member subscription
    * membre : templates > _form has been refactored
    * schema.yml : membre.actif is now an integer and not a boolean
    * model has been rebuilt
    

r155 - october, 7, 2009
    * StringToolsTest : new test for generatePassword method
    

r154 - october, 7, 2009
    * membre : security.yml > edit and show credentials have been documented
    * /apps/front/lib/form/ForgottenPasswordForm : new class
    * association : actions > new action Forgottenpassword
    * association : templates > loginSuccess.php > link if forgotten password
    * StringTools : new method generatePassword()
    * /lib/misc/MailerFactory.class.php : new class to generate swift object
    * association : actions > executeMailing > use new mailer factory class
    * membre : actions > index > redirect to show if we don't have access to
      index
    

r153 - october, 7, 2009
    * membre : security.yml > removed credential auto-checking for edit and show
    * membre : actions > edit and show actions are available for the user
    * membrePeer.php : new const IS_PENDING
    * association : actions > login > redirect to user profile if he can't list